# Objektinis-programavimas2

./: CMakeLists.txt  README.md  Vec.h  funkcijos.cpp  makefile  mytests.cpp  vector.cpp
Install/: Install.vdproj
Install/Release/: Install.msi
MySetup/: MySetup.sln
MySetup/AppWithDll/: AppWithDll.cpp  AppWithDll.vcxproj  AppWithDll.vcxproj.filters
MySetup/AppWithDll/Debug/: vc143.idb
MySetup/AppWithDll/Release/: AppWithDll.exe.recipe  AppWithDll.iobj  AppWithDll.ipdb
MySetup/Debug/: Dll.exp
MySetup/Dll/: Dll.vcxproj  Vec.h  dllmain.cpp
MySetup/Dll/Debug/: Dll.dll.recipe  Dll.ilk  vc143.idb
MySetup/Dll/Release/: Dll.dll.recipe  Dll.iobj  Dll.ipdb
MySetup/Install/: Install.vdproj
MySetup/Release/: Dll.exp
MySetup/x64/Debug/: Dll.exp
MySetup/x64/Release/: Dll.exp
documentation/html/: _vec_8h.html  _vec_8h.js  _vec_8h_source.html  annotated.html  classes.html  classstudentas-members.html  classstudentas.html  classstudentas.js  classzmogus-members.html  classzmogus.html  classzmogus.js  files.html  files_dup.js  functions.html  functions_func.html  functions_rela.html  functions_vars.html  funkcijos_8cpp.html  funkcijos_8cpp.js  globals.html  globals_func.html  hierarchy.html  index.html  menudata.js  navtreedata.js  navtreeindex0.js  vector_8cpp.html  vector_8cpp.js
documentation/html/search/: all_0.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  files_1.js  functions_1.js  functions_2.js  (+7 more)
documentation/latex/: _vec_8h.tex  _vec_8h_source.tex  classstudentas.tex  classzmogus.tex  files.tex  funkcijos_8cpp.tex  refman.tex  vector_8cpp.tex
(+47 files in other folders)
